--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -1,210 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-  <link rel="stylesheet" href="style.css">
-  <base href="../../assets/">
-  <script src="../pages/donate/script.js"></script>
-  <title>Online zoo</title>
-</head>
-<body onload="start();">
-  <header class="header">
-    <div class="wrapper_header">
-      <a href="../pages/main/" class="pet_story">
-        <h1>PetStory online</h1>
-        <img src="images/bamboo.png" alt="bamboo">
-      </a>
-      <nav class="first-part">
-        <span>
-          <a href="../pages/main/">
-            About
-          </a>
-        </span>
-        <span>Map</span>
-        <span>Zoos</span>
-        <span class="active">
-          <a href="../../../online-zoo/pages/donate/">
-            Donate
-          </a>
-        </span>
-        <span>Contact us</span>
-      </nav>
-      <span>
-        <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">
-          Designed by &copy;
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <base href="../../assets/" />
+    <script src="../pages/donate/script.js"></script>
+    <title>Online zoo</title>
+  </head>
+  <body onload="start();">
+    <header class="header">
+      <div class="wrapper_header">
+        <a href="../pages/main/" class="pet_story">
+          <h1>PetStory online</h1>
+          <img src="images/bamboo.png" alt="bamboo" />
         </a>
-      </span>
-    </div>
-  </header>
-  <main>
-    <section class="back-image"></section>
-    <section class="pick-a-feed">
-      <div class="content">
-        <div class="text">
-          <h3>
-            THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!
-          </h3>
-          <p>
-            Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity.  But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.
-          </p>
-        </div>
-        <h3>Donation Information</h3>
-        <div class="inside-window">
-          <h2>Pick and feed a friend</h2>
-          <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
-          <div class="image-box">
-            <div class="number">
-              <div>4</div>
-              <div>Panda diet for the day.</div>
-            </div>
-            <img src="icons/x_icon.png" alt="x-icon">
-            <img src="icons/panda_widget1.png" alt="panda-widget">
+        <nav class="first-part">
+          <span>
+            <a href="../pages/main/"> About </a>
+          </span>
+          <span>Map</span>
+          <span>Zoos</span>
+          <span class="active">
+            <a href="../../../online-zoo/pages/donate/"> Donate </a>
+          </span>
+          <span>Contact us</span>
+        </nav>
+        <span>
+          <a
+            href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
+            target="_blank"
+          >
+            Designed by &copy;
+          </a>
+        </span>
+      </div>
+    </header>
+    <main>
+      <section class="back-image"></section>
+      <section class="pick-a-feed">
+        <div class="content">
+          <div class="text">
+            <h3>
+              THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!
+            </h3>
+            <p>
+              Even though the Zoo has been able to reopen, we are at a greatly
+              reduced capacity with educational programs and public and private
+              events cancelled or postponed for additional months. We need you
+              now more than ever to help ensure that we overcome these
+              challenges. We have been actively raising funds in the community,
+              and we are grateful for the generosity. But much more support is
+              still needed, and we need your help! Please consider a gift today
+              – no matter what size – to help us sustain our mission.
+            </p>
           </div>
-          <form>
-            <div class="progress">
-              <p>Amount</p>
-              <div class="bar">
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$5000</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
+          <h3>Donation Information</h3>
+          <div class="inside-window">
+            <h2>Pick and feed a friend</h2>
+            <p>
+              We know the animals bring you joy, and in these extraordinary
+              times, we’re glad.
+            </p>
+            <div class="image-box">
+              <div class="number">
+                <div>4</div>
+                <div>Panda diet for the day.</div>
+              </div>
+              <img src="icons/x_icon.png" alt="x-icon" />
+              <img src="icons/panda_widget1.png" alt="panda-widget" />
+            </div>
+            <form>
+              <div class="progress">
+                <p>Amount</p>
+                <div class="bar">
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$5000</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$2000</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" checked />
+                    <span class="amount">$1000</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$500</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$200</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$100</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$50</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                  <label>
+                    <input type="radio" name="amount" />
+                    <span class="amount">$25</span>
+                    <img src="icons\Ellipse 7.png" alt="dot" />
+                  </label>
+                </div>
+              </div>
+              <div class="amount-input">
+                <input
+                  type="number"
+                  oninput="maxLenght(this);"
+                  id="amount"
+                  placeholder="Another amount"
+                />
+                <span>$</span>
+              </div>
+              <div class="radio">
+                <label for="mounthly">
+                  <input type="radio" id="mounthly" name="often" />
+                  <span></span>
+                  Mounthly
                 </label>
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$2000</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
-                </label>
-                <label>
-                  <input type="radio" name="amount" checked>
-                  <span class="amount">$1000</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
-                </label>
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$500</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
-                </label>
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$200</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
-                </label>
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$100</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
-                </label>
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$50</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
-                </label>
-                <label>
-                  <input type="radio" name="amount">
-                  <span class="amount">$25</span>
-                  <img src="icons\Ellipse 7.png" alt="dot">
+                <label for="once">
+                  <input type="radio" id="once" name="often" checked />
+                  Once
+                  <span></span>
                 </label>
               </div>
-            </div>
-            <div class="amount-input">
-              <input type="number" oninput="maxLenght(this);" id="amount" placeholder="Another amount">
-              <span>$</span>
-            </div>
-            <div class="radio" >
-              <label for="mounthly">
-                <input type="radio" id="mounthly" name="often">
-                <span></span>
-                Mounthly
-              </label>
-              <label for="once">
-                <input type="radio" id="once" name="often" checked>
-                Once
-                <span></span>
-              </label>
-            </div>
-          </form>
-          <button>Feed a friend now</button>
-          <p>Share with your friends on social networks </p>
+            </form>
+            <button>Feed a friend now</button>
+            <p>Share with your friends on social networks</p>
+          </div>
         </div>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <div class="wrapper">
-      <div>
-        <a href="../pages/main/" class="pet_story">
-          <p>PetStory online</p>
-          <img src="images/bamboo.png" alt="bamboo">
-        </a>
-      </div>
-      <form action="">
-        <label for="email">
-          Subscribe to our news
-        </label>
-        <input type="email" id="email" placeholder="Enter your email" required>
-        <button type="submit" id="submit">Submit</button>
-      </form>
-      <button class="to_donate">donate for volunteers</button>
-      <ul class="media">
-        <li>
-          <a class="media_elem" href="https://www.facebook.com/" target="_blank" rel="noreferrer">
-            <span class="wrapper_media">
-              <img src="icons/Facebook.png" alt="facebook">
-            </span>
-            <span>Facebook</span>
+      </section>
+    </main>
+    <footer>
+      <div class="wrapper">
+        <div>
+          <a href="../pages/main/" class="pet_story">
+            <p>PetStory online</p>
+            <img src="images/bamboo.png" alt="bamboo" />
           </a>
-        </li>
-        <li>
-          <a class="media_elem" href="https://twitter.com/" target="_blank" rel="noreferrer">
-            <span class="wrapper_media">
-              <img src="icons/Twitter.png" alt="twitter">
-            </span>
-            <span>Twitter</span>
-          </a>
-        </li>
-        <li>
-          <a class="media_elem" href="https://www.instagram.com/" target="_blank" rel="noreferrer">
-            <span class="wrapper_media">
-              <img src="icons/Instagram.png" alt="instagram">
-            </span>
-            <span>Instagram</span>
-          </a>
-        </li>
-        <li>
-          <a class="media_elem" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
-            <span class="wrapper_media">
-              <img src="icons/YouTube.png" alt="youtube">
-            </span>
-            <span>YouTube</span>
-          </a>
-        </li>
-      </ul>
-      <nav>
-        <ul>
+        </div>
+        <form action="">
+          <label for="email"> Subscribe to our news </label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your email"
+            required
+          />
+          <button type="submit" id="submit">Submit</button>
+        </form>
+        <button class="to_donate">donate for volunteers</button>
+        <ul class="media">
           <li>
-            <a href="../pages/main/">
-              About
+            <a
+              class="media_elem"
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <span class="wrapper_media">
+                <img src="icons/Facebook.png" alt="facebook" />
+              </span>
+              <span>Facebook</span>
             </a>
           </li>
           <li>
-              Map
+            <a
+              class="media_elem"
+              href="https://twitter.com/"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <span class="wrapper_media">
+                <img src="icons/Twitter.png" alt="twitter" />
+              </span>
+              <span>Twitter</span>
+            </a>
           </li>
           <li>
-              Zoos
+            <a
+              class="media_elem"
+              href="https://www.instagram.com/"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <span class="wrapper_media">
+                <img src="icons/Instagram.png" alt="instagram" />
+              </span>
+              <span>Instagram</span>
+            </a>
           </li>
           <li>
-              Contact us
+            <a
+              class="media_elem"
+              href="https://www.youtube.com/"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <span class="wrapper_media">
+                <img src="icons/YouTube.png" alt="youtube" />
+              </span>
+              <span>YouTube</span>
+            </a>
           </li>
         </ul>
-      </nav>
-      <div class="author">
-        <p>Designed by Alisa Samborskaya</p>
-        <p>©RSSchool & ©Yem Digital 2021</p>
+        <nav>
+          <ul>
+            <li>
+              <a href="../pages/main/"> About </a>
+            </li>
+            <li>Map</li>
+            <li>Zoos</li>
+            <li>Contact us</li>
+          </ul>
+        </nav>
+        <div class="author">
+          <p>Designed by Alisa Samborskaya</p>
+          <p>©RSSchool & ©Yem Digital 2021</p>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
